--- a/01-predict-diamond-prices-w-linear-regression-in-python/01-predict-diamond-prices-w-linear-regression-in-python.ipynb
+++ b/01-predict-diamond-prices-w-linear-regression-in-python/01-predict-diamond-prices-w-linear-regression-in-python.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "c8826955",
    "metadata": {},
    "outputs": [],
@@ -25,18 +25,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "f9beac2b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Read-in daata into dataframe\n",
+    "# Read data into dataframe\n",
     "df = pd.read_csv('../00-datasets/diamonds.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "b334bee0",
    "metadata": {},
    "outputs": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "fc609fa3",
    "metadata": {},
    "outputs": [
@@ -200,7 +200,7 @@
        "4  2.75  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "102ac219",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "7d6ce434",
    "metadata": {},
    "outputs": [
@@ -254,7 +254,7 @@
        "0"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "e52b2042",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "max       10.740000     58.900000     31.800000  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,17 +428,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "4da8fd61",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x1728dd6b640>"
+       "<seaborn.axisgrid.PairGrid at 0x1703663b8e0>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "efa1855b",
    "metadata": {},
    "outputs": [],
@@ -470,12 +470,12 @@
     "# Split dataset into 80% train and 20% test sets\n",
     "X = df['carat'].values.reshape(-1, 1)\n",
     "y = df['price'].values.reshape(-1, 1)\n",
-    "X_train, X_val, y_train, y_val = train_test_split(X, y, test_size=0.2, random_state=0)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "79281822",
    "metadata": {},
    "outputs": [
@@ -488,7 +488,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "d77cc7d0",
    "metadata": {},
    "outputs": [
@@ -532,64 +532,64 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>4791</th>\n",
-       "      <td>1574</td>\n",
-       "      <td>1701.620799</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8958</th>\n",
-       "      <td>5301</td>\n",
-       "      <td>5651.701657</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4753</th>\n",
-       "      <td>1338</td>\n",
+       "      <th>3510</th>\n",
+       "      <td>2359</td>\n",
        "      <td>1779.073365</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9281</th>\n",
-       "      <td>7130</td>\n",
-       "      <td>5961.511920</td>\n",
+       "      <th>4145</th>\n",
+       "      <td>17219</td>\n",
+       "      <td>14403.841595</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4855</th>\n",
-       "      <td>485</td>\n",
-       "      <td>-467.051044</td>\n",
+       "      <th>10012</th>\n",
+       "      <td>2030</td>\n",
+       "      <td>2011.431063</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4889</th>\n",
-       "      <td>1163</td>\n",
+       "      <th>3762</th>\n",
+       "      <td>3749</td>\n",
+       "      <td>5729.154222</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10128</th>\n",
+       "      <td>5805</td>\n",
+       "      <td>6271.322183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2350</th>\n",
+       "      <td>2255</td>\n",
+       "      <td>3405.577248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5034</th>\n",
+       "      <td>702</td>\n",
+       "      <td>230.022049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6256</th>\n",
+       "      <td>775</td>\n",
+       "      <td>384.927180</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10701</th>\n",
+       "      <td>736</td>\n",
+       "      <td>849.642575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10522</th>\n",
+       "      <td>4404</td>\n",
+       "      <td>5651.701657</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2781</th>\n",
+       "      <td>1385</td>\n",
        "      <td>1701.620799</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7233</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>2321.241326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6667</th>\n",
-       "      <td>6548</td>\n",
-       "      <td>5961.511920</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7537</th>\n",
-       "      <td>16407</td>\n",
-       "      <td>13242.053107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2608</th>\n",
-       "      <td>9702</td>\n",
-       "      <td>9369.424816</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1940</th>\n",
-       "      <td>2482</td>\n",
-       "      <td>1624.168234</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10446</th>\n",
-       "      <td>5702</td>\n",
-       "      <td>5884.059354</td>\n",
+       "      <th>5481</th>\n",
+       "      <td>2327</td>\n",
+       "      <td>3250.672116</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -597,37 +597,37 @@
       ],
       "text/plain": [
        "       Actual    Prediction\n",
-       "4791     1574   1701.620799\n",
-       "8958     5301   5651.701657\n",
-       "4753     1338   1779.073365\n",
-       "9281     7130   5961.511920\n",
-       "4855      485   -467.051044\n",
-       "4889     1163   1701.620799\n",
-       "7233     2021   2321.241326\n",
-       "6667     6548   5961.511920\n",
-       "7537    16407  13242.053107\n",
-       "2608     9702   9369.424816\n",
-       "1940     2482   1624.168234\n",
-       "10446    5702   5884.059354"
+       "3510     2359   1779.073365\n",
+       "4145    17219  14403.841595\n",
+       "10012    2030   2011.431063\n",
+       "3762     3749   5729.154222\n",
+       "10128    5805   6271.322183\n",
+       "2350     2255   3405.577248\n",
+       "5034      702    230.022049\n",
+       "6256      775    384.927180\n",
+       "10701     736    849.642575\n",
+       "10522    4404   5651.701657\n",
+       "2781     1385   1701.620799\n",
+       "5481     2327   3250.672116"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Feed validation data to model\n",
-    "y_predict = model.predict(X_val)\n",
+    "# Feed test data to model\n",
+    "y_predict = model.predict(X_test)\n",
     "\n",
     "# Compare predictions to actual values\n",
-    "actual_vs_predict = pd.DataFrame({'Actual':y_val.flatten(), 'Prediction':y_predict.flatten()})\n",
+    "actual_vs_predict = pd.DataFrame({'Actual':y_test.flatten(), 'Prediction':y_predict.flatten()})\n",
     "actual_vs_predict.sample(12)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "id": "38022d43",
    "metadata": {},
    "outputs": [
@@ -637,14 +637,14 @@
        "0.8515758113126248"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Evaluate model\n",
-    "model.score(X_val, y_val)"
+    "model.score(X_test, y_test)"
    ]
   },
   {
@@ -653,12 +653,20 @@
    "metadata": {},
    "source": [
     "## Notes\n",
-    "In this section, I take note of the choices and assumptions I made.\n",
+    "The choices and assumptions made in this work:\n",
     "* Quickly checked for missing and duplicate values in the data. No filtering steps and no additional preprocessing performed.\n",
     "* Assumed 'carat' feature is a good predictor of the 'price' feature. These features were assigned accordingly to variables X and y, predictor and target.\n",
-    "* The dataset was split into 80% train and 20% test sets. * No validation set was created or used. No hyperparameter tuning occurred.\n",
+    "* The dataset was split into 80% train and 20% test sets. No validation set was created or used. No hyperparameter tuning occurred.\n",
     "* Model was evaluated using R-squared or coefficient determination metric only. The best possible score is 1.0 and the worst could drop below zero. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "65d44ff7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
