--- a/02-predict-insurance-prices-w-linear-regression-in-python/02-predict-insurance-prices-w-linear-regression-in-python.ipynb
+++ b/02-predict-insurance-prices-w-linear-regression-in-python/02-predict-insurance-prices-w-linear-regression-in-python.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "93826e3a",
+   "id": "ddf5fb0d",
    "metadata": {},
    "source": [
-    "## Predict diamond prices with linear regression in Python\n",
+    "## Predict insurance prices with linear regression in Python\n",
     "02-predict-insurance-prices-w-linear-regression-in-python  "
    ]
   },
@@ -69,7 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "9799bb8c",
+   "id": "17621d8d",
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4fc6b6ae",
+   "id": "0ecf7253",
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4557f0ad",
+   "id": "d05d2fe2",
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a83cf2b0",
+   "id": "3e6ec9df",
    "metadata": {
     "scrolled": true
    },
@@ -308,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8f6ac347",
+   "id": "aafdfdd3",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b9ff829d",
+   "id": "f660fd44",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "b8ea513c",
+   "id": "6b45b5b6",
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fdbbbf37",
+   "id": "c8a66a36",
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +505,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6ee86129",
+   "id": "54abc125",
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +564,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "79993be1",
+   "id": "554cdaf4",
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "73ce5dfe",
+   "id": "d36d1da3",
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "1b876f4c",
+   "id": "ba08c41c",
    "metadata": {},
    "outputs": [
     {
@@ -649,7 +649,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "acc30bc9",
+   "id": "9077f791",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -663,7 +663,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "6fced5df",
+   "id": "bea20a7f",
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +689,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "6a7af73c",
+   "id": "7bf8d728",
    "metadata": {},
    "outputs": [
     {
@@ -816,7 +816,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "05ab7e2a",
+   "id": "758a3c29",
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +838,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "699a78ed",
+   "id": "40508ed1",
    "metadata": {},
    "outputs": [
     {
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44ecba1c",
+   "id": "1752cc47",
    "metadata": {},
    "source": [
     "## Notes\n",
