--- a/04-classify-elderly-activities-w-knn-in-python/04-classify-elderly-activities-w-knn-in-python.ipynb
+++ b/04-classify-elderly-activities-w-knn-in-python/04-classify-elderly-activities-w-knn-in-python.ipynb
@@ -5,7 +5,7 @@
    "id": "40024e45",
    "metadata": {},
    "source": [
-    "# Classify elderly activities with KNN \n",
+    "# Classify elderly activities with k-nearest neighbors in python\n",
     "04-classify-elderly-activities-w-knn-in-python"
    ]
   },
