--- a/05-classify-patient-condition-w-knn-in-python/05-classify-patient-condition-w-knn-in-python.ipynb
+++ b/05-classify-patient-condition-w-knn-in-python/05-classify-patient-condition-w-knn-in-python.ipynb
@@ -851,13 +851,21 @@
    "metadata": {},
    "source": [
     "## Notes\n",
-    "A brief recap of what was done in this work:\n",
     "* We wanted to classify the condition of biomechanical patients.\n",
     "* Our dataset had 310 patient records and 7 features including 'pelvic_incidence', 'pelviv_tilt', 'lumbar_lordosis_angle', 'sacral_slope', 'pelvic_radius', 'degree_spondylolisthesis', and 'class', of which 6 are of type float and 1 is of type object.\n",
     "* A quick inspection showed that there are no missing values and no duplicate records.\n",
+    "* The dataset was split into 80% train and 20% test sets. No validation set was created or used. No hyperparameter tuning occurred.\n",
     "* We built, trained, and tested a k-nearest neighbor classifier. \n",
     "* We evaluated our model using ground truth and several metrics including precision, recall, and f1-score."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e55250f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
