--- a/08-detect-liver-disease-patient-w-dt-in-python/08-detect-liver-disease-patient-w-dt-in-python.ipynb
+++ b/08-detect-liver-disease-patient-w-dt-in-python/08-detect-liver-disease-patient-w-dt-in-python.ipynb
@@ -614,7 +614,7 @@
     }
    ],
    "source": [
-    "# Explore some categorical feature\n",
+    "# Explore some features\n",
     "df['Dataset'].value_counts()"
    ]
   },
@@ -843,7 +843,7 @@
     "df.dropna(inplace=True)\n",
     "# transform categorical feature(s) to numeric\n",
     "le = LabelEncoder()\n",
-    "df.Gender = le.fit_transform(df.Gender)"
+    "df['Gender'] = le.fit_transform(df['Gender'])"
    ]
   },
   {
@@ -1048,6 +1048,7 @@
     "* We wanted to detect patients with liver disease.\n",
     "* Our dataset had 583 records with 11 features. 5 of which are of data type float, 5 of type integer, and 1 of type object.\n",
     "* A quick look showed that there were 4 missing values. We dropped the records with missing values. \n",
+    "* The dataset was split into 80% train and 20% test sets. No validation set was created or used. No hyperparameter tuning occurred.\n",
     "* We built, trained, and tested a decision tree classifier.\n",
     "* We evaluated our model using ground truth and several metrics including precision, recall, and f1-score."
    ]
