--- a/11-detect-poison-mushrooms-w-svm-in-python/11-detect-poison-mushrooms-w-svm-in-python.ipynb
+++ b/11-detect-poison-mushrooms-w-svm-in-python/11-detect-poison-mushrooms-w-svm-in-python.ipynb
@@ -7,7 +7,7 @@
     "_uuid": "8f2839f25d086af736a60e9eeb907d3b93b6e0e5"
    },
    "source": [
-    "# Detect poison mushrooms with support vector machines (SVM) in python\n",
+    "# Detect poison mushrooms with support vector machines (SVM) in Python\n",
     "11-detect-poison-mushrooms-w-svm-in-python"
    ]
   },
@@ -818,7 +818,7 @@
     }
    ],
    "source": [
-    "# Check for duplicate values\n",
+    "# Check for duplicates\n",
     "df.duplicated().sum()"
    ]
   },
